--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
 tauri = { version = "1.0.0-rc.5" }
 serde = "1.0"
 thiserror = "1.0"
+everything-rs = "0.1.9"
